Bug 460036 - UX regression for adding terminal command/script shortcuts in kcm_keys compared to kcm_khotkeys
Summary: UX regression for adding terminal command/script shortcuts in kcm_keys compar...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_keys (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression, usability, wayland-only
: 456951 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-10-06 07:27 UTC by Justin Zobel
Modified: 2023-10-01 03:12 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin Zobel 2022-10-06 07:27:48 UTC
UX regression in kcm_keys compared to kcm_khotkeys

On Wayland, the KHotkeys KCM ("Custom Shortcuts") is no longer shown. People are expected to use kcm_keys to assign custom shortcuts to arbitrary CLI commands and shell scripts, if they have these use cases.

kcm_khotkeys made this easy, but kcm_keys makes it much more difficult; see Bug 440431 and Bug 456951. The fact that KHotKeys is not visible on Wayland makes this an overall UX regression in the Wayland session compared to the X11 session
Comment 1 Nate Graham 2022-10-07 07:48:22 UTC
*** Bug 456951 has been marked as a duplicate of this bug. ***
Comment 2 Nate Graham 2023-01-04 14:24:54 UTC
Git commit 35881adf826e17f6c59c185455ba7d21c4149102 by Nate Graham, on behalf of Bharadwaj Raju.
Committed on 04/01/2023 at 14:24.
Pushed by ngraham into branch 'master'.

kcms/keys: Add an "Add Command" button

After reading a good amount of feedback and questions from users, it seems that
it is not clear that the textbox in the "Add Application…" dialog can be used to
add custom commands.

Some examples of user confusion:
- https://old.reddit.com/r/kde/comments/xw8k06/the_new_shortcut_page_in_wayland_is_a_big/
- https://old.reddit.com/r/kde/comments/x0tmr5/custom_keyboard_shortcut_to_run_command/
- https://old.reddit.com/r/kde/comments/xf59gs/how_do_i_create_a_custom_shortcut/
- https://old.reddit.com/r/kde/comments/xf4a3g/global_mappings/
- https://old.reddit.com/r/kde/comments/xe59pe/custom_shortcuts_disappeared_in_system_settings/

This commit adds a separate button to add a command, which opens a dedicated
overlay sheet that can be used to add a custom command, which then lives in a
new "Commands" section in the sidebar.
Related: bug 440431
FIXED-IN: 5.27

M  +17   -2    kcms/keys/basemodel.cpp
M  +16   -1    kcms/keys/basemodel.h
M  +17   -3    kcms/keys/globalaccelmodel.cpp
M  +48   -2    kcms/keys/kcm_keys.cpp
M  +2    -0    kcms/keys/kcm_keys.h
M  +115  -11   kcms/keys/package/contents/ui/main.qml
M  +2    -1    kcms/keys/standardshortcutsmodel.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/35881adf826e17f6c59c185455ba7d21c4149102